# StarlitStories

./: .env.example  .gitignore  LICENSE  README.md  langgraph.json  pyproject.toml  start-all.bat  start-backend.bat  start-frontend.bat  stop-all.bat
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App-backup.tsx  App-simple.tsx  App.tsx  index.css
frontend/src/api/: generateStory.ts
frontend/src/components/: FlipCard.tsx
src/: __init__.py
src/api/: __init__.py  server.py
src/react_agent/: __init__.py  context.py  graph.py  main.py  prompts.py  utils.py
src/react_agent/prompts/: formatter_prompt.txt  main_agent_prompt.txt  moral_summarizer_prompt.txt  story_checker_prompt.txt  story_generator_prompt.txt  story_retriever_prompt.txt
src/react_agent/services/: __init__.py  llm_client.py  safety.py
src/react_agent/tools/: __init__.py  tools.py
